--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
 	</parent>
 	<groupId>com.tui</groupId>
 	<artifactId>backend-technical-test</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<name>backend-technical-test</name>
-	<description>Create an Api rest that allows us to order the "pilotes" of the great Miquel Montoro</description>
+	<description>A REST API that allows us to order the "pilotes" of the great Miquel Montoro</description>
 
 	<properties>
 		<java.version>8</java.version>
 		<springdoc-openapi-ui.version>1.5.9</springdoc-openapi-ui.version>
+		<jjwt.version>0.9.1</jjwt.version>
 	</properties>
 
 	<dependencies>
@@ -42,7 +43,7 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 
 		<dependency>
