--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   app:
-    build: /backend-technical-test-v2-master
+    build: ./
     restart: on-failure
     ports:
       - 8080:8080
@@ -13,8 +13,6 @@ services:
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.H2Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
-    volumes:
-      - .m2:/root/.m2
     stdin_open: true
     tty: true
 volumes:
